<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/title_timetable" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_groups"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/navigation_notebook"
        android:icon="@drawable/ic_notes"
        android:title="@string/title_notebook" />
</menu>